syntax = "proto3";

service HumanDetection {
  rpc DetectHumans (stream ImageRequest) returns (stream ImageResponse);
}

message ImageRequest {
  bytes image_data = 1;
}

message ImageResponse {
  bytes processed_image = 1;
}